project view will render correct height to show x-scrollbar

--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -1,8 +1,9 @@
 @import "../../style/variables";
 
-
 .App-Project {
   background-color: $gray-100;
   padding: 0.5rem 0.8rem;
+  width: 100%;
   overflow-y: hidden;
+  overflow-x: auto;
 }
